--- a/Discount.Store.Web/appsettings.json
+++ b/Discount.Store.Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "SqliteConnection": "Data Source=database.sqlite"
+    "SqliteConnection": "Data Source=database.sqlite",
+    "DiscountStoreContext": "Server=OMEN\\sqlexpress;Database=DiscountStoreContext;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
