--- a/Discount.Store.Infrastructure/Discount.Store.Infrastructure.csproj
+++ b/Discount.Store.Infrastructure/Discount.Store.Infrastructure.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\Discount.Store.SharedKernel\Discount.Store.SharedKernel.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
